Fix layout issues.

--- a/src/style.css
+++ b/src/style.css
@@ -81,9 +81,18 @@
   box-sizing: border-box;
 }
 
-body {
+html, body {
+  padding: 0;
   margin: 0;
+}
+
+html {
+  height: 100%;
+}
+
+body {
   min-height: 100vh;
+  min-height: -webkit-fill-available;
   overflow-x: hidden;
   background: var(--bg-gradient);
   position: relative;
